Git_WGBH_QC/src/objects/SFDC_Component__c.object
<CustomObject>
    <description>A Project may be comprised of one or more Components. This object tracks all related Bugs, Test Cases, and Feature Requests related to a Component of your Product.</description>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Descrption__c</fullName>
        <label>Product Descrption</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Component</label>
    <listViews>
        <fullName>AllComponents</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Product_Name__c</columns>
        <columns>Product_Code__c</columns>
        <columns>Product_Descrption__c</columns>
        <columns>Product_Family__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Components</label>
    </listViews>
    <nameField>
        <label>Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>